tests/ui/consts/const_in_pattern/issue-34784-match-on-non-int-raw-ptr.stderr
error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-34784-match-on-non-int-raw-ptr.rs:9:9
   |
LL |         C => {}
   |         ^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-34784-match-on-non-int-raw-ptr.rs:16:9
   |
LL |         C_INNER => {}
   |         ^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-34784-match-on-non-int-raw-ptr.rs:27:9
   |
LL |         D => {}
   |         ^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/issue-34784-match-on-non-int-raw-ptr.rs:32:9
   |
LL |         STR => {}
   |         ^^^

error: aborting due to 4 previous errors

